# automation-python-ticket-desk-manager

./: Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
auth/: auth.py
listing/: listing.py
subcategory/: subcategory.py
task/: job.py
utils/: logger.py
